fixs the layout of content wrap and testimonials section

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -106,7 +106,7 @@ select {
         @include container($main-width);
     }
     @include breakpoint($l-devices) {
-        @include container($l-devices);
+        @include container($large-width);
     }
 }
 .section {
