--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -11,13 +11,14 @@ $susy: (
 /*break points*/
 $bp-mobile: 320px; 
 $bp-tablet: 768px;
-$bp-desktop: 1024px;
-$l-devices: 1300px;
+$bp-desktop: 1200px;
+$l-devices: 1440px;
 
 // $bp-mobile-to-tablet: $bp-mobile $bp-tablet;
 // $bp-tablet-to-desktop: $bp-tablet $bp-desktop;
 
-$main-width: 900px;
+$main-width: 1200px;
+$large-width: 1360px;
 $no-gatters: (
 	gutters: 0
 );
