--- a/sass/modules/_testimonials.scss
+++ b/sass/modules/_testimonials.scss
@@ -9,6 +9,9 @@
         @include breakpoint($bp-desktop){
             padding-left: 30rem;
         }
+        @include breakpoint($l-devices){
+            padding-left: 40rem;
+        }
     }
 
     .owl-dot {
